--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,18 +1,25 @@
 <md-card class="task-card">
   <md-card-title>Todos</md-card-title>
-  <md-input-container>
-    <input mdInput 
+  <md-input-container class="flex-container">
+    <input mdInput
+          fxFlexAlign="stretch"
+          class="flex-item"  
           [(ngModel)]="todo"
           name="todo"
           type="text" 
           placeholder="Add Task"/>
-    
   </md-input-container>
-  <button md-button (click)="addTask()">Add Todo</button>
+  <button md-button 
+        class="flex-item" (click)="addTask()">Add Todo</button>
   <md-card-content>
     <md-list>
-      <md-list-item *ngFor="let todo of tasks">
-        <h4>{{todo}}</h4>
+      <md-list-item
+        class="flex-container"
+        fxLayoutAlign="start center"
+        fxLayout="row"
+        *ngFor="let todo of tasks; let i = index;">
+          <div class="flex-item" fxFlex="80"><h4>{{todo}}</h4></div>
+          <div class="flex-item" fxFlex="20"><button md-button-flat (click)="removeTask(todo)">X</button></div>
       </md-list-item>
     </md-list>
   </md-card-content>
