--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,16 +1,20 @@
 <md-card class="task-card">
   <md-card-title>Todos</md-card-title>
-  <md-input-container class="flex-container">
-    <input mdInput
-          fxFlexAlign="stretch"
-          class="flex-item"  
-          [(ngModel)]="todo"
-          name="todo"
-          type="text" 
-          placeholder="Add Task"/>
-  </md-input-container>
-  <button md-button 
-        class="flex-item" (click)="addTask()">Add Todo</button>
+  <div class="flex-container" fxLayout="space-between center">
+    <md-input-container>
+      <input mdInput
+            class="flex-item"  
+            [(ngModel)]="todo"
+            name="todo"
+            type="text" 
+            placeholder="Add things to do..."/>
+    </md-input-container>
+    <button md-fab
+          class="flex-item" 
+          (click)="addTask()">
+            <md-icon>add</md-icon>
+    </button>
+  </div>
   <md-card-content>
     <md-list>
       <md-list-item
@@ -18,8 +22,15 @@
         fxLayoutAlign="start center"
         fxLayout="row"
         *ngFor="let todo of tasks; let i = index;">
-          <div class="flex-item" fxFlex="80"><h4>{{todo}}</h4></div>
-          <div class="flex-item" fxFlex="20"><button md-button-flat (click)="removeTask(todo)">X</button></div>
+          <div class="flex-item" fxFlex="80">
+            <h4>{{todo}}</h4>
+          </div>
+          <div class="flex-item" fxFlex="20">
+            <button md-button-flat (click)="removeTask(todo)">
+              <!-- <i class="material-icons">delete</i> -->
+              <md-icon>delete</md-icon>
+            </button>
+          </div>
       </md-list-item>
     </md-list>
   </md-card-content>
