tried nav  md-tab w/ routes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,8 @@
-<!-- <app-header></app-header> -->
-<md-toolbar color="primary"><span>Productivity Manager</span></md-toolbar>   
+<!-- <md-toolbar color="primary"><span>Productivity Manager</span></md-toolbar>   
 <nav md-tab-navbar>
     <a md-tab-link
       *ngFor="let routerLink of routeLinks; let i = index;"
       [routerLink]="routeLink.link">
        {{routeLink.label}} 
     </a>
-</nav> 
-<router-outlet></router-outlet>
-
-
+</nav>  -->
