styled task list container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <md-toolbar color="primary"><span>Productivity Manager</span></md-toolbar>   
 <nav md-tab-nav-bar>
     <a md-tab-link
-      *ngFor="let routerLink of routeLinks; let i = index;"
-      [routerLink]="routerLink.link"
-      routerLinkActive="active">
+      *ngFor="let routerLink of routerLinks; let i = index;"
+      [routerLink]="routerLink.link">
        {{routerLink.label}} 
     </a>
 </nav> 
