--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
-<md-grid-list cols="3">
-    <!-- <md-grid-tile-header>
-        
-    </md-grid-tile-header>   -->
-    <md-grid-tile colspan="1" rowspan="1">
+<md-grid-list cols="3" rowHeight="9:16">
+     <!-- <md-grid-tile-header>
+        <h2>Dashboard</h2>
+    </md-grid-tile-header>    -->
+    <md-grid-tile colspan="1" rowspan="1" class="flex-container" fxLayoutAlign="start stretch">
         <app-tasks></app-tasks>
     </md-grid-tile>
     <md-grid-tile colspan="1" rowspan="1">
