--- a/src/app/components/task-list/task-list.component.css
+++ b/src/app/components/task-list/task-list.component.css
@@ -13,6 +13,8 @@
 
 .task-list {
     width: 400px;
+    height: 100vh;
+    min-width: 262px;
     max-width: 33vw;
     box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
     border: 1px solid rgba(0,0,0,.03);
