--- a/src/app/components/timer/timer.component.html
+++ b/src/app/components/timer/timer.component.html
@@ -1,14 +1,13 @@
 <md-card id="timer">
     <md-card-content>
        <md-grid-list cols="1" rowHeight="3:1">
-          <md-grid-tile colspan="1" rowspan="1">{{timer()}}</md-grid-tile>
           <md-grid-tile colspan="1" rowspan="1">
-            <app-progress></app-progress>
+            <app-progress [timeString]="time"></app-progress>
           </md-grid-tile>
           <md-grid-tile colspan="1" rowspan="1">
             <md-card-actions>
-              <button md-button (click)="start()">Start</button>
-              <button md-button (click)="stop(timer(0,0))">Stop</button>
+              <button md-button (click)="start(1)">Start</button>
+              <button md-button (click)="stop()">Stop</button>
             </md-card-actions>
           </md-grid-tile>
       </md-grid-list> 
