displaying progress spinner change-janky

--- a/src/app/components/timer/progress/progress.component.html
+++ b/src/app/components/timer/progress/progress.component.html
@@ -1,2 +1,2 @@
-<h1>{{timeString}}</h1>
-<md-progress-spinner mode="determinate" [value]="100"></md-progress-spinner>
+<h4>{{timeString}}</h4>
+<md-progress-spinner mode="determinate" [value]="formatTime(timeString, 60)"></md-progress-spinner>
