--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,12 +1,8 @@
-<md-grid-list cols="3" rowHeight="9:16">
-     <!-- <md-grid-tile-header>
-        <h2>Dashboard</h2>
-    </md-grid-tile-header>    -->
-    <md-grid-tile colspan="1" rowspan="1" class="flex-container" fxLayoutAlign="start stretch">
+<md-grid-list cols="2" rowHeight="9:16">
+    <md-grid-tile colspan="1" rowspan="1" class="flex-container" fxLayoutAlign="start start">
         <app-tasks></app-tasks>
     </md-grid-tile>
     <md-grid-tile colspan="1" rowspan="1">
         <app-timer></app-timer>
     </md-grid-tile>
-    <!-- <md-grid-tile></md-grid-tile> -->
 </md-grid-list>
