--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header [navLinks]="routerLinks"></app-header>
+<md-grid-tile-header>
+      <app-header></app-header>
+</md-grid-tile-header>
 <router-outlet></router-outlet>
 
 
