--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,14 @@
-<md-grid-list cols="2" rowHeight="9:16">
-    <md-grid-tile colspan="1" rowspan="1" class="flex-container" fxLayoutAlign="start start">
-        <app-tasks></app-tasks>
+<md-grid-list cols="12" rowHeight="300px">
+    <md-grid-tile
+        colspan="4"
+        rowspan="2">
+            <app-tasks></app-tasks>
     </md-grid-tile>
-    <md-grid-tile colspan="1" rowspan="1">
-        <app-timer></app-timer>
+    <md-grid-tile
+        colspan="4"
+        rowspan="2">
+            <app-timer></app-timer>
     </md-grid-tile>
 </md-grid-list>
+<md-grid-tile-footer>
+</md-grid-tile-footer>
